--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+*.xcframework filter=lfs diff=lfs merge=lfs -text
 . !text !filter !merge !diff
 *.json !text !filter !merge !diff
 *.swift !text !filter !merge !diff
