--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,27 @@
 *.xcframework filter=lfs diff=lfs merge=lfs -text
+*.gitignore filter=lfs diff=lfs merge=lfs -text
+*.plist filter=lfs diff=lfs merge=lfs -text
+*.pdb filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
+*.dat filter=lfs diff=lfs merge=lfs -text
+*.xml filter=lfs diff=lfs merge=lfs -text
+*.config filter=lfs diff=lfs merge=lfs -text
+*.rsp filter=lfs diff=lfs merge=lfs -text
+/Frameworks/UnityFramework.xcframework/ios-arm64/UnityFramework.framework/Data/Resources/unity_builtin_extra filter=lfs diff=lfs merge=lfs -text
+/Frameworks/UnityFramework.xcframework/ios-arm64/UnityFramework.framework/Data/globalgamemanagers filter=lfs diff=lfs merge=lfs -text
+*.assets filter=lfs diff=lfs merge=lfs -text
+/Frameworks/UnityFramework.xcframework/ios-arm64/UnityFramework.framework/Data/level0 filter=lfs diff=lfs merge=lfs -text
+*.resS filter=lfs diff=lfs merge=lfs -text
+/Frameworks/UnityFramework.xcframework/ios-arm64/UnityFramework.framework/Data/level1 filter=lfs diff=lfs merge=lfs -text
+/Frameworks/UnityFramework.xcframework/ios-arm64/UnityFramework.framework/Data/level2 filter=lfs diff=lfs merge=lfs -text
+/Frameworks/UnityFramework.xcframework/ios-arm64/UnityFramework.framework/Data/level3 filter=lfs diff=lfs merge=lfs -text
+/Frameworks/UnityFramework.xcframework/ios-arm64/UnityFramework.framework/Data/level4 filter=lfs diff=lfs merge=lfs -text
+/Frameworks/UnityFramework.xcframework/ios-arm64/UnityFramework.framework/Data/unity[[:space:]]default[[:space:]]resources filter=lfs diff=lfs merge=lfs -text
+*.h filter=lfs diff=lfs merge=lfs -text
+*.modulemap filter=lfs diff=lfs merge=lfs -text
+/Frameworks/UnityFramework.xcframework/ios-arm64/UnityFramework.framework/UnityFramework filter=lfs diff=lfs merge=lfs -text
+*.swift filter=lfs diff=lfs merge=lfs -text
+*.md filter=lfs diff=lfs merge=lfs -text
 . !text !filter !merge !diff
 *.json !text !filter !merge !diff
 *.swift !text !filter !merge !diff
