--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.xcframework filter=lfs diff=lfs merge=lfs -text
+Frameworks/UnityFramework.xcframework/ios-arm64/UnityFramework.framework/UnityFramework filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.plist filter=lfs diff=lfs merge=lfs -text
 *.pdb filter=lfs diff=lfs merge=lfs -text
