--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 *.xcframework filter=lfs diff=lfs merge=lfs -text
 /Frameworks/UnityFramework.xcframework/ios-arm64/UnityFramework.framework/UnityFramework filter=lfs diff=lfs merge=lfs -text
 *.framework filter=lfs diff=lfs merge=lfs -text
+Frameworks/* filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.plist filter=lfs diff=lfs merge=lfs -text
 *.pdb filter=lfs diff=lfs merge=lfs -text
